@@ -27,6 +27,8 @@ Contributions:
 
     * Vincent Danen -- Mandrake Linux RPMs.
 
+    * Bill Duncan -- SquirrelMail plugin.
+
     * Arcady Genkin -- Gentoo Linux Package.
 
     * Lou Hevly -- documentation (vpopmail tutorial).
