@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jan 14 18:49:36 2002 -->
+<!-- Mon Feb 25 13:20:55 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -154,6 +154,12 @@ tutorial for installing TMDA with vpopmail</a><br><br>
 a TMDA configuration and administration tool which integrates into the 
 <a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
  web managment system.<br><br>
+
+<li>Bill Duncan has written a
+<a href="http://www.squirrelmail.org/plugin_view.php?id=78" 
+TARGET="Resource Window">TMDA plugin</a> for the
+<a href="http://www.squirrelmail.org/" TARGET="Resource Window">SquirrelMail</a>
+webmail package.<br><br>
 
 <li><a href="http://www.visca.com/tmda/tmda_confirm.html" TARGET="Resource Window">tmda_confirm.pl</a> 
 is a Perl script that checks all the CONFIRM messages in the TMDA log
