@@ -1,3 +1,7 @@
+2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Bill Duncan.
+
 2002-02-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* COPYRIGHT: Update BSD license.
